--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -1,5 +1,5 @@
-.contador{
-    width: 20%;
+.contadorContent{
+    width: 50%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -7,17 +7,10 @@
     margin-bottom: 20px;
 }
 
-.btnContador {
-    width: 20%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
 .btnOperacion {
     width: 20%;
     height: 30px;
-    background-color: #B5CC72;
+    background-color: grey;
     color: white;
     font-weight: 800;
     border: 0;
@@ -31,4 +24,12 @@
     flex-direction: column;
     justify-content: center;
     font-weight: 800;
+}
+
+.btnCarrito {
+    width: 60%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
 }
