carga de desafíos entregables 4 y 5

--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,9 +1,10 @@
 .imgStyle {
     height: 300px;
+    width: 400px;
     object-fit: cover;
     object-position: center;
 }
 
-.cardStyle {
+/* .cardStyle {
     width: 30%;
-}
+} */
